---------------------------------------------------------------------------------------------------
Version: 1.21.2
Date: 2023-08-11

  Changes:
    - Improved unit time to live handling.
    - Lower meele units' some 95% elemental resists back to 90%, same across the race.
    - Minor bump to meele units' health.

  Bugfixes
    - Fix death animations on building.

---------------------------------------------------------------------------------------------------
Version: 1.21.1
Date: 2023-08-11

  Bugfixes:
    - Fix a crash where settings in race mod cache did not properly refresh.

---------------------------------------------------------------------------------------------------
Version: 1.21.0
Date: 2023-08-11

  Changes:
    - Refactor default autoplace
    - Fix sunker_colony to sunken_colony
    - Prefix all entities for better compatiblity.
    - use new ERM mod registration system
    - Added team color settings when HD package is installed
    - Normalize distance_per_frame to 0.2 / 0.5 for units
    - Turret range is now max range config + 16
    - Scourge explosion damage change from 250 -> 200, radius 2 -> 3

---------------------------------------------------------------------------------------------------
Version: 1.20.5
Date: 2023-08-03

  Changes:
    - increased unit cost for custom attacks groups.
    - adjusted spawn chance and units for dropship and carrier
    - Map color is now changeable in startup setting.
    - K2 Creep can be toggled off.

---------------------------------------------------------------------------------------------------
Version: 1.20.4
Date: 2023-07-30

  Changes:
    - Removed an unintentional unit spawn when zergling dies.

---------------------------------------------------------------------------------------------------
Version: 1.20.3
Date: 2023-07-30

  Bugfixes:
    - Remove a non-debug print function.

---------------------------------------------------------------------------------------------------